--- a/skin-nagi_sitemap/skin-cover.html
+++ b/skin-nagi_sitemap/skin-cover.html
@@ -97,86 +97,10 @@
 		<span class="material-symbols-rounded">menu</span>
 	</button>
 
+	<script src="skin-nagimemo/common-ui.js"></script>
 	[[JS:LIGHTBOX:JQ]]
 	<!-- Twemoji CDN 利用のためライセンス表記免除 -->
 	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
-	<script>
-		// FAB Sidebar/Post Toggle and Widget Formatting
-		(function () {
-			var fabMenu = document.getElementById('fab-menu');
-			var closeBtn = document.querySelector('.close-sidebar');
-			var sidebar = document.getElementById('sidebar');
-			var sidebarOverlay = document.getElementById('sidebar-overlay');
-			// Removed post related vars
-
-			function openSidebar() {
-				if (sidebar) sidebar.classList.add('active');
-				if (sidebarOverlay) sidebarOverlay.classList.add('active');
-				if (fabMenu) {
-					fabMenu.querySelector('span').textContent = 'close';
-					fabMenu.classList.add('active');
-				}
-			}
-
-			function closeSidebar() {
-				if (sidebar) sidebar.classList.remove('active');
-				if (sidebarOverlay) sidebarOverlay.classList.remove('active');
-				if (fabMenu) {
-					fabMenu.querySelector('span').textContent = 'menu';
-					fabMenu.classList.remove('active');
-				}
-			}
-
-			function toggleSidebar(e) {
-				if (e) e.preventDefault();
-				if (sidebar && sidebar.classList.contains('active')) {
-					closeSidebar();
-				} else {
-					openSidebar();
-				}
-			}
-
-			if (fabMenu) fabMenu.onclick = toggleSidebar;
-			if (sidebarOverlay) sidebarOverlay.onclick = closeSidebar;
-			if (closeBtn) closeBtn.onclick = closeSidebar;
-
-			// Widget Link Fix: Merge link and post count for Archives, Hashtags, and Categories
-			function mergeLinkAndCount(containerSelector, linkClass) {
-				var areas = document.querySelectorAll(containerSelector);
-				for (var i = 0; i < areas.length; i++) {
-					var links = areas[i].querySelectorAll(linkClass);
-					for (var j = 0; j < links.length; j++) {
-						var link = links[j];
-						// Find .num that is a sibling (next element)
-						var sibling = link.nextSibling;
-						while (sibling) {
-							if (sibling.nodeType === 1 && sibling.classList && sibling.classList.contains('num')) {
-								link.appendChild(sibling);
-								break;
-							}
-							sibling = sibling.nextSibling;
-						}
-					}
-				}
-			}
-
-			mergeLinkAndCount('.widget.datelistarea', '.datelistlink');
-			mergeLinkAndCount('.hashtaglistarea', '.taglink');
-			// For categories, target both .catlink and .categorylink
-			mergeLinkAndCount('.categoryarea', '.catlink');
-			mergeLinkAndCount('.categoryarea', '.categorylink');
-
-			// Execute Twemoji
-			if (typeof twemoji !== 'undefined') {
-				twemoji.parse(document.body);
-			}
-
-			// Enable animations after page load (prevent initial animation flash)
-			setTimeout(function () {
-				document.body.classList.add('animations-ready');
-			}, 100);
-		})();
-	</script>
 </body>
 
 </html>
