--- a/skin-nagimemo/skin-cover.html
+++ b/skin-nagimemo/skin-cover.html
@@ -102,139 +102,11 @@
 	</button>
 
 	<script src="skin-nagimemo/drag-drop-upload.js?v7"></script>
+	<script src="skin-nagimemo/sidebar-profile.js"></script>
+	<script src="skin-nagimemo/common-ui.js"></script>
 	[[JS:LIGHTBOX:JQ]]
 	<!-- Twemoji CDN 利用のためライセンス表記免除 -->
 	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
-	<script>
-		// FAB Sidebar/Post Toggle and Widget Formatting
-		(function () {
-			var fabMenu = document.getElementById('fab-menu');
-			var fabPost = document.getElementById('fab-post');
-			var closeBtn = document.querySelector('.close-sidebar');
-			var sidebar = document.getElementById('sidebar');
-			var postArea = document.querySelector('.postarea-wrapper');
-			var sidebarOverlay = document.getElementById('sidebar-overlay');
-			var postOverlay = document.getElementById('post-overlay');
-
-			function openSidebar() {
-				closePost(); // Close post if open
-				if (sidebar) sidebar.classList.add('active');
-				if (sidebarOverlay) sidebarOverlay.classList.add('active');
-				if (fabMenu) {
-					fabMenu.querySelector('span').textContent = 'close';
-					fabMenu.classList.add('active');
-				}
-			}
-
-			function closeSidebar() {
-				if (sidebar) sidebar.classList.remove('active');
-				if (sidebarOverlay) sidebarOverlay.classList.remove('active');
-				if (fabMenu) {
-					fabMenu.querySelector('span').textContent = 'menu';
-					fabMenu.classList.remove('active');
-				}
-			}
-
-			function openPost() {
-				closeSidebar(); // Close sidebar if open
-				if (postArea) postArea.classList.add('active');
-				if (postOverlay) postOverlay.classList.add('active');
-				if (fabPost) {
-					fabPost.querySelector('span').textContent = 'close';
-					fabPost.classList.add('active');
-				}
-			}
-
-			function closePost() {
-				if (postArea) postArea.classList.remove('active');
-				if (postOverlay) postOverlay.classList.remove('active');
-				if (fabPost) {
-					fabPost.querySelector('span').textContent = 'edit';
-					fabPost.classList.remove('active');
-				}
-			}
-
-			function toggleSidebar(e) {
-				if (e) e.preventDefault();
-				if (sidebar && sidebar.classList.contains('active')) {
-					closeSidebar();
-				} else {
-					openSidebar();
-				}
-			}
-
-			function togglePost(e) {
-				if (e) e.preventDefault();
-				if (postArea && postArea.classList.contains('active')) {
-					closePost();
-				} else {
-					openPost();
-				}
-			}
-
-			if (fabMenu) fabMenu.onclick = toggleSidebar;
-			if (fabPost) fabPost.onclick = togglePost;
-			if (sidebarOverlay) sidebarOverlay.onclick = closeSidebar;
-			if (postOverlay) postOverlay.onclick = closePost;
-			if (closeBtn) closeBtn.onclick = closeSidebar;
-
-			// PC Scroll FAB Visibility Logic
-			function checkScrollFab() {
-				// Only active on PC (> 900px)
-				if (window.innerWidth > 900) {
-					if (window.scrollY > 300) {
-						if (fabPost) fabPost.classList.add('pc-scroll-visible');
-					} else {
-						if (fabPost) fabPost.classList.remove('pc-scroll-visible');
-					}
-				} else {
-					// On mobile, ensure class is removed to fallback to default CSS
-					if (fabPost) fabPost.classList.remove('pc-scroll-visible');
-				}
-			}
-
-			window.addEventListener('scroll', checkScrollFab);
-			window.addEventListener('resize', checkScrollFab);
-			// Initial check
-			checkScrollFab();
-
-			// Widget Link Fix: Merge link and post count for Archives, Hashtags, and Categories
-			function mergeLinkAndCount(containerSelector, linkClass) {
-				var areas = document.querySelectorAll(containerSelector);
-				for (var i = 0; i < areas.length; i++) {
-					var links = areas[i].querySelectorAll(linkClass);
-					for (var j = 0; j < links.length; j++) {
-						var link = links[j];
-						// Find .num that is a sibling (next element)
-						var sibling = link.nextSibling;
-						while (sibling) {
-							if (sibling.nodeType === 1 && sibling.classList && sibling.classList.contains('num')) {
-								link.appendChild(sibling);
-								break;
-							}
-							sibling = sibling.nextSibling;
-						}
-					}
-				}
-			}
-
-			mergeLinkAndCount('.widget.datelistarea', '.datelistlink');
-			mergeLinkAndCount('.hashtaglistarea', '.taglink');
-			// For categories, target both .catlink and .categorylink
-			mergeLinkAndCount('.categoryarea', '.catlink');
-			mergeLinkAndCount('.categoryarea', '.categorylink');
-
-			// Execute Twemoji
-			if (typeof twemoji !== 'undefined') {
-				twemoji.parse(document.body);
-			}
-
-			// Enable animations after page load (prevent initial animation flash)
-			setTimeout(function () {
-				document.body.classList.add('animations-ready');
-			}, 100);
-		})();
-	</script>
 </body>
 
 </html>
