--- a/skin-nagi_sitemap/skin-onelog.html
+++ b/skin-nagi_sitemap/skin-onelog.html
@@ -1,5 +1,5 @@
 
-<!-- ▼1投稿ごとのボックス(サイトマップ: リストモード) -->
+[[!-- ▼1投稿ごとのボックス(サイトマップ: リストモード) --]]
 <div class="onelogbox [[POSTSTATUS]]" id="pos[[LOOPCOUNT]]"> 
 	
 	<div class="list-meta">
