--- a/skin-nagimemo/modules/footer.html
+++ b/skin-nagimemo/modules/footer.html
@@ -6,7 +6,7 @@
 	</div>
 
 	<p class="backlink">[[FREE:HOMELINK]]</p>
-	<!--不要であればfooter-navのdiv、p の[[FREE:HOMELINK]]はコメントアウトするか、削除してください-->
-	<!--以下はてがろぐ本家のものなので、削除しないでください-->
+	[[!--不要であればfooter-navのdivや、p の[[FREE:HOMELINK]]はコメントアウトするか、削除してください--]]
+	[[!--以下はてがろぐ本家のものなので、削除しないでください--]]
 	<p class="poweredby">[[VERSION]].</p>
 </footer>
