--- a/skin-nagimemo/modules/sidebar.html
+++ b/skin-nagimemo/modules/sidebar.html
@@ -32,6 +32,18 @@
 	</div>
 </div>
 
+[[!-- ナビゲーションメニュー表示 --]]
+<div class="widget navigationwidget">
+	<div class="widget-body">
+		<ul class="utility-links">
+			<li><a href="[[PICTS:URL]]">Image<span class="material-symbols-rounded icon-right">chevron_right</span></a></li>
+			<li><a href="[[GALLERY:URL]]">Gallery<span class="material-symbols-rounded icon-right">chevron_right</span></a></li>
+			<li><a href="[[SITEMAP:URL]]">Sitemap<span class="material-symbols-rounded icon-right">chevron_right</span></a></li>
+		</ul>
+	</div>
+</div>
+
+
 [[!-- カテゴリ表示 --]]
 <div class="widget categoryarea">
 	<p class="widget-title">Categories</p>
@@ -93,14 +105,10 @@
 	</div>
 </div>
 
-[[!-- ユーティリティ表示 --]]
+[[!-- RSS表示 --]]
 <div class="widget utilitywidget">
 	<div class="widget-body">
 		<ul class="utility-links">
-			<li><a href="[[GALLERY:URL]]">Gallery Mode</a></li>
-			<li><a href="[[SITEMAP:URL]]">Sitemap</a></li>
-			<li><a href="[[RANDOM:URL]]">Random</a></li>
-			<li><a href="[[REVERSE:URL]]">Reverse Order</a></li>
 			<li><a href="[[RSS:URL]]">RSS Feed</a></li>
 		</ul>
 	</div>
