--- a/skin-nagimemo/skin-cover.html
+++ b/skin-nagimemo/skin-cover.html
@@ -17,9 +17,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=[[CHARCODE]]">
 	<title>[[SITUATION:TITLE]] [[FREE:TITLE:MAIN]] [[FREE:TITLE:SUB]]</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	[[INCLUDE:FROM-THIS-SKIN-DIR:modules/noindex.html]]
 	<link rel="alternate" type="application/rss+xml" title="[[FREE:TITLE:MAIN]]RSSフィード" href="[[RSS:URL:PURE:FULL]]">
 
-	<!-- Google Fonts & Icons -->
+	[[!-- Google Fonts & Icons --]]
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
@@ -101,12 +102,13 @@
 		<span class="material-symbols-rounded">menu</span>
 	</button>
 
+	[[!-- Twemoji CDN 利用のためライセンス表記免除 --]]
+	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
+
 	<script src="skin-nagimemo/drag-drop-upload.js?v7"></script>
 	<script src="skin-nagimemo/sidebar-profile.js"></script>
 	<script src="skin-nagimemo/common-ui.js"></script>
 	[[JS:LIGHTBOX:JQ]]
-	<!-- Twemoji CDN 利用のためライセンス表記免除 -->
-	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
 </body>
 
 </html>
