--- a/NagiGallery/skin-cover.html
+++ b/NagiGallery/skin-cover.html
@@ -14,6 +14,7 @@
 	<meta charset="[[CHARCODE]]">
 	<title>[[SITUATION:TITLE]] [[FREE:TITLE:MAIN]] [[FREE:TITLE:SUB]]</title>
 	<meta name="viewport" content="initial-scale=1">
+	[[INCLUDE:skin-nagimemo/modules/noindex.html]]
 	<!-- NagiGallery Styles (Reset & Base included in main.css) -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Poppins:wght@400;500;600;700&display=swap">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
