--- a/skin-nagi_sitemap/skin-cover.html
+++ b/skin-nagi_sitemap/skin-cover.html
@@ -17,9 +17,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=[[CHARCODE]]">
 	<title>[[SITUATION:TITLE]] [[FREE:TITLE:MAIN]] [[FREE:TITLE:SUB]]</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	[[INCLUDE:skin-nagimemo/modules/noindex.html]]
 	<link rel="alternate" type="application/rss+xml" title="[[FREE:TITLE:MAIN]]RSSフィード" href="[[RSS:URL:PURE:FULL]]">
 
-	<!-- Google Fonts & Icons -->
+	[[!-- Google Fonts & Icons --]]
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
@@ -27,10 +28,10 @@
 		rel="stylesheet">
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-	<!-- NagiMemo共通スタイル (ベース) -->
-	<link rel="stylesheet" href="../skin-nagimemo/main.css?2026/01/17v1">
-	<!-- Sitemap固有スタイル (オーバーライド) -->
-	<link rel="stylesheet" href="sitemap-overrides.css?2026/01/17v1">
+	[[!-- NagiMemo共通スタイル (ベース) --]]
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?2026/01/17v5">
+	[[!-- Sitemap固有スタイル (オーバーライド) --]]
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]sitemap-overrides.css?2026/01/17v1">
 	[[OGP]]
 </head>
 
@@ -54,7 +55,7 @@
 		</div>
 	</header>
 
-	<!-- 投稿エリア削除済み -->
+	[[!-- 投稿エリア削除済み --]]
 
 	<div class="contents">
 
@@ -89,18 +90,20 @@
 	[[INCLUDE:skin-nagimemo/modules/footer.html]]
 
 	<div id="sidebar-overlay"></div>
-	<!-- Post Overlay is not needed if no post area, but keeping it safe or removing if not used -->
-	<!-- Removed post overlay to avoid confusion -->
+	[[!-- Post Overlay is not needed if no post area, but keeping it safe or removing if not used --]]
+	[[!-- Removed post overlay to avoid confusion --]]
 
-	<!-- FAB Post removed for sitemap -->
+	[[!-- FAB Post removed for sitemap --]]
 	<button id="fab-menu" type="button" aria-label="Open Menu">
 		<span class="material-symbols-rounded">menu</span>
 	</button>
 
-	<script src="skin-nagimemo/common-ui.js"></script>
-	[[JS:LIGHTBOX:JQ]]
-	<!-- Twemoji CDN 利用のためライセンス表記免除 -->
+	[[!-- Twemoji CDN 利用のためライセンス表記免除 --]]
 	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
+
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/sidebar-profile.js?v=fix5"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js"></script>
+	[[JS:LIGHTBOX:JQ]]
 </body>
 
 </html>
