Polish README.md, update CSS versioning, and create release zip

--- a/skin-nagimemo/skin-cover.html
+++ b/skin-nagimemo/skin-cover.html
@@ -1,13 +1,4 @@
-<!-- 
-=============================================================
- * ![NagiMemo Skin]
- * 
- * NagiMemo v1.0.0
- * Copyright (c) 2026 Lichiphen
- * Licensed under the MIT License
- * https://gitlab.com/lichiphen/nagimemo/-/blob/main/LICENSE
- * ==========================================================
- */-->
+[[INCLUDE:FROM-THIS-SKIN-DIR:modules/copyright.html]]
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -28,7 +19,9 @@
 		rel="stylesheet">
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-	<link rel="stylesheet" href="main.css?2026/01/16v2">
+
+			[[!-- NagiMemo共通スタイル (ベース) --]]
+	<link rel="stylesheet" href="main.css?2026-01-18">
 	[[OGP]]
 </head>
 
