--- a/NagiGallery/skin-cover.html
+++ b/NagiGallery/skin-cover.html
@@ -1,13 +1,4 @@
-<!-- 
-=============================================================
- * ![NagiGallery Skin]
- * 
- * NagiGallery v1.0.0
- * Copyright (c) 2026 Lichiphen
- * Licensed under the MIT License
- * https://gitlab.com/lichiphen/nagimemo/-/blob/main/LICENSE
- * ==========================================================
- */-->
+[[INCLUDE:skin-nagimemo/modules/copyright.html]]
 <!DOCTYPE html>
 <html lang="ja">
 <head>
