--- a/NagiPicts/skin-cover.html
+++ b/NagiPicts/skin-cover.html
@@ -1,12 +1,4 @@
-<!-- 
-=============================================================
- * ![NagiMemo Skin for NagiPicts]
- * 
- * NagiMemo v1.0.0
- * Copyright (c) 2026 Lichiphen
- * Licensed under the MIT License
- * ==========================================================
- */-->
+[[INCLUDE:skin-nagimemo/modules/copyright.html]]
 
 <!DOCTYPE html>
 <html lang="ja">
