--- a/skin-nagi_sitemap/skin-cover.html
+++ b/skin-nagi_sitemap/skin-cover.html
@@ -1,13 +1,4 @@
-<!-- 
-=============================================================
- * ![NagiMemo Skin]
- * 
- * NagiMemo v1.0.0
- * Copyright (c) 2026 Lichiphen
- * Licensed under the MIT License
- * https://gitlab.com/lichiphen/nagimemo/-/blob/main/LICENSE
- * ==========================================================
- */-->
+[[INCLUDE:skin-nagimemo/modules/copyright.html]]
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -29,9 +20,9 @@
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	[[!-- NagiMemo共通スタイル (ベース) --]]
-	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?2026/01/17v5">
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?2026/01/18">
 	[[!-- Sitemap固有スタイル (オーバーライド) --]]
-	<link rel="stylesheet" href="[[PATH:SKINDIR]]sitemap-overrides.css?2026/01/17v1">
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]sitemap-overrides.css?2026/01/18">
 	[[OGP]]
 </head>
 
