--- a/skin-nagimemo/edit.htm
+++ b/skin-nagimemo/edit.htm
@@ -11,8 +11,8 @@ window.addEventListener('load', function() {
 });
 </script>
 
-<script src="skin-nagimemo/drag-drop-upload.js"></script>
-<script src="skin-nagimemo/edit.js?v=20260117-04"></script>
+<script src="skin-nagimemo/drag-drop-upload.js?2026/01/19"></script>
+<script src="skin-nagimemo/edit.js?v=20260119"></script>
 
 <!-- Custom UI Elements (Inserted below the form) -->
 <div class="nagimemo-edit-footer">
