--- a/NagiGallery/skin-cover.html
+++ b/NagiGallery/skin-cover.html
@@ -9,7 +9,7 @@
 	<!-- NagiGallery Styles (Reset & Base included in main.css) -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Poppins:wght@400;500;600;700&display=swap">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-	<link type="text/css" rel="stylesheet" href="main.css?v1">
+	<link type="text/css" rel="stylesheet" href="main.css?2026/01/19">
 	[[RSS:AUTODISCOVERY:FULL]]
 	[[OGP]]
 </head>
