--- a/NagiPicts/skin-cover.html
+++ b/NagiPicts/skin-cover.html
@@ -21,7 +21,7 @@
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
  [[!-- NagiMemo共通スタイル + Picts固有スタイル --]]
  <link rel="stylesheet" href="../skin-nagimemo/main.css?2026/01/15v2">
- <link rel="stylesheet" href="picts-style.css">
+ <link rel="stylesheet" href="picts-style.css?2026/01/19">
  [[OGP]]
 </head>
 
