--- a/skin-nagimemo/skin-cover.html
+++ b/skin-nagimemo/skin-cover.html
@@ -21,7 +21,7 @@
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 			[[!-- NagiMemo共通スタイル (ベース) --]]
-	<link rel="stylesheet" href="main.css?2026-01-18">
+	<link rel="stylesheet" href="main.css?2026-01-19">
 	[[OGP]]
 </head>
 
@@ -98,9 +98,9 @@
 	[[!-- Twemoji CDN 利用のためライセンス表記免除 --]]
 	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
 
-	<script src="skin-nagimemo/drag-drop-upload.js?v7"></script>
-	<script src="skin-nagimemo/sidebar-profile.js"></script>
-	<script src="skin-nagimemo/common-ui.js"></script>
+	<script src="skin-nagimemo/drag-drop-upload.js?2026/01/19"></script>
+	<script src="skin-nagimemo/sidebar-profile.js?2026/01/19"></script>
+	<script src="skin-nagimemo/common-ui.js?2026/01/19"></script>
 	[[JS:LIGHTBOX:JQ]]
 </body>
 
