--- a/NagiGallery/skin-cover.html
+++ b/NagiGallery/skin-cover.html
@@ -1,4 +1,4 @@
-[[INCLUDE:skin-nagimemo/modules/copyright.html]]
+﻿[[INCLUDE:skin-nagimemo/modules/copyright.html]]
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -9,15 +9,13 @@
 	<!-- NagiGallery Styles (Reset & Base included in main.css) -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Poppins:wght@400;500;600;700&display=swap">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-	<link type="text/css" rel="stylesheet" href="main.css?2026/01/19">
+	<link type="text/css" rel="stylesheet" href="main.css?2026012023">
 	[[RSS:AUTODISCOVERY:FULL]]
 	[[OGP]]
 </head>
 <body class="[[SITUATION:CLASS]]">
 
-	<!-- ==========================================================================
-	     Header
-	     ========================================================================== -->
+[[!-- ==== Header  === --]]
 	<header class="site-header">
 		<div class="header-inner">
 			<h1 class="maintitle">
@@ -29,34 +27,31 @@
 		</div>
 	</header>
 
-	<!-- ==========================================================================
-	     Main Content (Grid)
-	     ========================================================================== -->
+	[[!-- ==== Main Content (Grid) === --]]
 	<div class="contents">
 		
-		<!-- Situation Header (Filtered view notice) -->
+		[[!-- Situation Header (Filtered view notice) --]]
 		[[SITUATION:HTML]]
 
-		<!-- Gallery Grid Container -->
+		[[!-- Gallery Grid Container --]]
 		<div class="gallery-grid">
 			[[TEGALOG]]
 		</div>
 
-		<!-- Page Navigation -->
+		[[!-- Page Navigation --]]
 		<div class="pagenavi">
 			<p class="pagelinks">[[NAVI:PREVNEXT]]</p>
 			<p class="pagenums">[[NAVI:PAGELIST]]</p>
 			<p class="pagehome">[[NAVI:TOPPAGE]]</p>
 		</div>
 
-	</div><!-- /.contents -->
-	<!-- ==========================================================================
-	     Footer
-	     ========================================================================== -->
+	</div>[[!-- /.contents --]]
+
+	[[!-- ==== Footer === --]]
 	[[INCLUDE:skin-nagimemo/modules/footer.html]]
 
-	<!-- Lightbox Script -->
+	[[!-- Lightbox Script --]]
 	[[JS:LIGHTBOX:JQ]]
-
 </body>
 </html>
+
