--- a/skin-nagimemo/skin-cover.html
+++ b/skin-nagimemo/skin-cover.html
@@ -1,4 +1,4 @@
-[[INCLUDE:FROM-THIS-SKIN-DIR:modules/copyright.html]]
+﻿[[INCLUDE:FROM-THIS-SKIN-DIR:modules/copyright.html]]
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -21,7 +21,7 @@
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 			[[!-- NagiMemo共通スタイル (ベース) --]]
-	<link rel="stylesheet" href="main.css?2026-01-19">
+	<link rel="stylesheet" href="main.css?2026012023">
 	[[OGP]]
 </head>
 
@@ -98,10 +98,15 @@
 	[[!-- Twemoji CDN 利用のためライセンス表記免除 --]]
 	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
 
-	<script src="skin-nagimemo/drag-drop-upload.js?2026/01/19"></script>
-	<script src="skin-nagimemo/sidebar-profile.js?2026/01/19"></script>
-	<script src="skin-nagimemo/common-ui.js?2026/01/19"></script>
+	<script src="skin-nagimemo/drag-drop-upload.js?2026012023"></script>
+	<script src="skin-nagimemo/sidebar-profile.js?2026012023"></script>
+	<script src="skin-nagimemo/common-ui.js?2026012023"></script>
 	[[JS:LIGHTBOX:JQ]]
+
+	[[!-- ログイン時のみ、QUICKPOSTサムネイルでのNagiSwipe発火を抑制するJSを読み込む --]]
+	[[IF:ISLOGGEDIN:YES]]
+	<script src="skin-nagimemo/quickpost-exclude.js?2026012023"></script>
+	[[/IF]]
 </body>
 
 </html>
