--- a/skin-nagimemo/skin-cover.html
+++ b/skin-nagimemo/skin-cover.html
@@ -108,7 +108,7 @@
 	window.addEventListener('DOMContentLoaded', () => {
 		if (document.body.classList.contains('loggedin-YES')) {
 			const script = document.createElement('script');
-			script.src = 'skin-nagimemo/quickpost-exclude.js';
+			script.src = '[[PATH:SKINDIR]]quickpost-exclude.js?20260122';
 			script.defer = true;
 			document.head.appendChild(script);
 		}
