--- a/NagiGallery/skin-cover.html
+++ b/NagiGallery/skin-cover.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=LINE+Seed+JP:wght@400;700&family=Poppins:wght@400;500;600;700&display=swap">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-	<link type="text/css" rel="stylesheet" href="main.css?2026012110">
+	<link type="text/css" rel="stylesheet" href="main.css?20260124v3">
 	[[RSS:AUTODISCOVERY:FULL]]
 	[[OGP]]
 </head>
@@ -54,6 +54,8 @@
 
 	[[!-- Lightbox Script --]]
 	[[JS:LIGHTBOX:JQ]]
+	[[INCLUDE:skin-nagimemo/modules/credits-modal.html]]
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/share.js?20260124v3"></script>
 </body>
 </html>
 
