--- a/skin-nagi_sitemap/skin-cover.html
+++ b/skin-nagi_sitemap/skin-cover.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	[[!-- NagiMemo共通スタイル (ベース) --]]
-	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?2026012110">
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?20260124v8">
 	[[!-- Sitemap固有スタイル (オーバーライド) --]]
 	<link rel="stylesheet" href="[[PATH:SKINDIR]]sitemap-overrides.css?2026012110">
 	[[OGP]]
@@ -86,14 +86,16 @@
 
 	[[!-- FAB Post removed for sitemap --]]
 	<button id="fab-menu" type="button" aria-label="Open Menu">
-		<span class="material-symbols-rounded">menu</span>
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg>
 	</button>
 
 	[[!-- Twemoji CDN 利用のためライセンス表記免除 --]]
 	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
 
 	<script src="[[PATH:SKINDIR]]../skin-nagimemo/sidebar-profile.js?2026012110"></script>
-	<script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js?2026012203"></script>
+	[[INCLUDE:skin-nagimemo/modules/credits-modal.html]]
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js?2026/01/24v2"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/share.js?20260124v8"></script>
 	[[JS:LIGHTBOX:JQ]]
 </body>
 
