--- a/skin-nagimemo/skin-cover.html
+++ b/skin-nagimemo/skin-cover.html
@@ -21,7 +21,7 @@
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 			[[!-- NagiMemo共通スタイル (ベース) --]]
-	<link rel="stylesheet" href="main.css?20260124v2">
+	<link rel="stylesheet" href="main.css?20260124v8">
 	[[OGP]]
 </head>
 
@@ -87,12 +87,12 @@
 	<div id="post-overlay"></div>
 
 	<button id="fab-post" class="loggedin-[[SYS:ISLOGGEDIN]]" type="button" aria-label="Toggle Post Area">
-		<span class="material-symbols-rounded">edit</span>
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1 0 32c0 8.8 7.2 16 16 16l32 0zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z"/></svg>
 		<span class="fab-text">書く</span>
 	</button>
 
 	<button id="fab-menu" type="button" aria-label="Open Menu">
-		<span class="material-symbols-rounded">menu</span>
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg>
 	</button>
 
 	[[!-- Twemoji CDN 利用のためライセンス表記免除 --]]
@@ -100,7 +100,7 @@
 
 	<script src="skin-nagimemo/drag-drop-upload.js?2026012110"></script>
 	<script src="skin-nagimemo/sidebar-profile.js?2026012110"></script>
-	<script src="skin-nagimemo/common-ui.js?2026012203"></script>
+	<script src="skin-nagimemo/common-ui.js?2026/01/24v2"></script>
 	[[JS:LIGHTBOX:JQ]]
 
 	[[!-- ログイン時のみ、QUICKPOSTサムネイルでのNagiSwipe発火を抑制するJSを読み込む --]]
@@ -114,34 +114,9 @@
 		}
 	});
 	</script>
-	[[!-- Share & Credits UI --]]
-    <div id="toast">
-        <div class="toast-content">Copied!</div>
-    </div>
+	[[INCLUDE:FROM-THIS-SKIN-DIR:modules/credits-modal.html]]
 
-    <div id="credit-modal">
-        <div class="modal-box">
-            <h3>LICENSE / CREDITS</h3>
-            <div class="modal-content-list">
-                <div>
-                    <p class="label">Icons</p>
-                    <p>Icons by Font Awesome (© Fonticons, Inc.)<br>
-                    Licensed under <a href="https://fontawesome.com/license/free" target="_blank" rel="noopener">CC BY 4.0</a><br>
-                    <a href="https://fontawesome.com" target="_blank" rel="noopener">https://fontawesome.com</a></p>
-                </div>
-                <div>
-                    <p class="label">Software</p>
-                    <p>Licensed under the MIT License<br>
-                    Copyright © 2026 Lichiphen</p>
-                </div>
-            </div>
-            <button id="modal-close" class="modal-close-btn">Close</button>
-        </div>
-    </div>
-
-    <textarea id="tempInput" style="position:absolute; left:-9999px; opacity:0; pointer-events:none;" aria-hidden="true"></textarea>
-
-    <script src="skin-nagimemo/share.js?20260124v2"></script>
+	<script src="skin-nagimemo/share.js?20260124v8"></script>
 </body>
 
 </html>
