--- a/NagiGallery/skin-cover.html
+++ b/NagiGallery/skin-cover.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=LINE+Seed+JP:wght@400;700&family=Poppins:wght@400;500;600;700&display=swap">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-	<link type="text/css" rel="stylesheet" href="main.css?20260124v3">
+	<link type="text/css" rel="stylesheet" href="[[PATH:SKINDIR]]main.css?20260124v14">
 	[[RSS:AUTODISCOVERY:FULL]]
 	[[OGP]]
 </head>
@@ -54,6 +54,8 @@
 
 	[[!-- Lightbox Script --]]
 	[[JS:LIGHTBOX:JQ]]
+	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js?2026/01/24v2"></script>
 	[[INCLUDE:skin-nagimemo/modules/credits-modal.html]]
 	<script src="[[PATH:SKINDIR]]../skin-nagimemo/share.js?20260124v13"></script>
 </body>
