--- a/NagiPicts/skin-cover.html
+++ b/NagiPicts/skin-cover.html
@@ -20,8 +20,8 @@
  <link rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
  [[!-- NagiMemo共通スタイル + Picts固有スタイル --]]
- <link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?20260124v14">
- <link rel="stylesheet" href="[[PATH:SKINDIR]]picts-style.css?2026012110">
+ <link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?20260125v17">
+ <link rel="stylesheet" href="[[PATH:SKINDIR]]picts-style.css?20260125v15">
  [[OGP]]
 </head>
 
@@ -68,9 +68,9 @@
  [[JS:LIGHTBOX:JQ]]
 
  <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
- <script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js?2026/01/24v2"></script>
+ <script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js?20260125v16"></script>
  [[INCLUDE:skin-nagimemo/modules/credits-modal.html]]
- <script src="[[PATH:SKINDIR]]../skin-nagimemo/share.js?20260124v13"></script>
+ <script src="[[PATH:SKINDIR]]../skin-nagimemo/share.js?20260125v16"></script>
 </body>
 
 </html>
