--- a/skin-nagi_sitemap/skin-cover.html
+++ b/skin-nagi_sitemap/skin-cover.html
@@ -20,9 +20,9 @@
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	[[!-- NagiMemo共通スタイル (ベース) --]]
-	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?20260124v14">
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?20260125v17">
 	[[!-- Sitemap固有スタイル (オーバーライド) --]]
-	<link rel="stylesheet" href="[[PATH:SKINDIR]]sitemap-overrides.css?2026012110">
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]sitemap-overrides.css?20260125v15">
 	[[OGP]]
 </head>
 
@@ -92,10 +92,10 @@
 	[[!-- Twemoji CDN 利用のためライセンス表記免除 --]]
 	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
 
-	<script src="[[PATH:SKINDIR]]../skin-nagimemo/sidebar-profile.js?2026012110"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/sidebar-profile.js?20260125v16"></script>
 	[[INCLUDE:skin-nagimemo/modules/credits-modal.html]]
-	<script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js?2026/01/24v2"></script>
-	<script src="[[PATH:SKINDIR]]../skin-nagimemo/share.js?20260124v13"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js?20260125v16"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/share.js?20260125v16"></script>
 	[[JS:LIGHTBOX:JQ]]
 </body>
 
