--- a/skin-nagimemo/skin-cover.html
+++ b/skin-nagimemo/skin-cover.html
@@ -21,7 +21,7 @@
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 			[[!-- NagiMemo共通スタイル (ベース) --]]
-	<link rel="stylesheet" href="main.css?20260124v8">
+	<link rel="stylesheet" href="main.css?20260125v17">
 	[[OGP]]
 </head>
 
@@ -98,9 +98,9 @@
 	[[!-- Twemoji CDN 利用のためライセンス表記免除 --]]
 	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
 
-	<script src="skin-nagimemo/drag-drop-upload.js?2026012110"></script>
-	<script src="skin-nagimemo/sidebar-profile.js?2026012110"></script>
-	<script src="skin-nagimemo/common-ui.js?2026/01/24v2"></script>
+	<script src="skin-nagimemo/drag-drop-upload.js?20260125v16"></script>
+	<script src="skin-nagimemo/sidebar-profile.js?20260125v16"></script>
+	<script src="skin-nagimemo/common-ui.js?20260125v16"></script>
 	[[JS:LIGHTBOX:JQ]]
 
 	[[!-- ログイン時のみ、QUICKPOSTサムネイルでのNagiSwipe発火を抑制するJSを読み込む --]]
@@ -108,7 +108,7 @@
 	window.addEventListener('DOMContentLoaded', () => {
 		if (document.body.classList.contains('loggedin-YES')) {
 			const script = document.createElement('script');
-			script.src = '[[PATH:SKINDIR]]quickpost-exclude.js?20260122';
+			script.src = '[[PATH:SKINDIR]]quickpost-exclude.js?20260125v16';
 			script.defer = true;
 			document.head.appendChild(script);
 		}
@@ -116,7 +116,7 @@
 	</script>
 	[[INCLUDE:FROM-THIS-SKIN-DIR:modules/credits-modal.html]]
 
-	<script src="skin-nagimemo/share.js?20260124v13"></script>
+	<script src="skin-nagimemo/share.js?20260125v16"></script>
 </body>
 
 </html>
