スキン内htmlの文字コード変換

--- a/skin-nagi_sitemap/skin-cover.html
+++ b/skin-nagi_sitemap/skin-cover.html
@@ -1,6 +1,4 @@
-﻿[[INCLUDE:skin-nagimemo/modules/copyright.html]]
-
-<!DOCTYPE html>
+[[INCLUDE:skin-nagimemo/modules/copyright.html]]<!DOCTYPE html>
 <html lang="ja">
 
 <head>
@@ -20,9 +18,9 @@
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	[[!-- NagiMemo共通スタイル (ベース) --]]
-	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?20260125v17">
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/mainP26013015">
 	[[!-- Sitemap固有スタイル (オーバーライド) --]]
-	<link rel="stylesheet" href="[[PATH:SKINDIR]]sitemap-overrides.css?20260125v15">
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]sitemap-overridesP26013015">
 	[[OGP]]
 </head>
 
@@ -92,13 +90,11 @@
 	[[!-- Twemoji CDN 利用のためライセンス表記免除 --]]
 	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
 
-	<script src="[[PATH:SKINDIR]]../skin-nagimemo/sidebar-profile.js?20260125v16"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/sidebar-profileP26013015"></script>
 	[[INCLUDE:skin-nagimemo/modules/credits-modal.html]]
-	<script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js?20260125v16"></script>
-	<script src="[[PATH:SKINDIR]]../skin-nagimemo/share.js?20260125v16"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/common-uiP26013015"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/shareP26013015"></script>
 	[[JS:LIGHTBOX:JQ]]
 </body>
 
 </html>
-
-
